# graphica-bio-take-home-assessment

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: dependencies.py  main.py
backend/app/api/: proteins.py
backend/app/database/: database.py  parquet_db.py  utils.py
backend/app/models/: models.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/public/: manifest.json
frontend/src/: App.tsx  index.css  index.tsx  types.ts
frontend/src/api/: proteinApi.ts
frontend/src/components/atoms/: ScoreCell.tsx
frontend/src/components/molecules/: ProteinMetaPanel.tsx  Table.tsx
frontend/src/components/organisms/: ProteinAnnotationsTable.tsx  ProteinInteractionsTable.tsx  ProteinSearchResultsTable.tsx  ProteinTabs.tsx
frontend/src/components/pages/: ProteinDetails.tsx  ProteinSearch.tsx
