[tool.poetry]
name = "protein-info-backend"
version = "0.1.0"
description = "Backend for the Protein Information Application"
authors = ["Ben Vozza <benvozza@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.0"
uvicorn = "^0.21.1"
pandas = "^2.0.0"
pyarrow = "^11.0.0"
pydantic = "^1.10.7"
psycopg2-binary = "^2.9.6"
numpy = "^1.26"

[tool.poetry.dev-dependencies]
pytest = "^7.3.1"
black = "^23.3.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

